feat:新增自动配置路由

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <body>
   <!--动态主题-->
   <link rel="stylesheet/less" href="%PUBLIC_URL%/baseUI.less">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.11.1/less.min.js"></script>
+<!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.11.1/less.min.js"></script>-->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
