--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:100,300,400,500,700,900">
+  <!-- <link rel="stylesheet" href="https://fonts.googlefonts.cn/css?family=Noto+Sans+SC:100,300,400,500,700,900"> -->
+  <!-- <link href="https://fonts.googlefonts.cn/css?family=Roboto" rel="stylesheet"> -->
   <title>HNS Anime Club</title>
 </head>
 
